src/app/exams/exams-add.scss
@import '../variables';

:host {

  .view-container {
    display: grid;
    grid-auto-rows: 1fr;

    &.view-container.view-full-height {
      height: $view-container-height-no-toolbar;
    }

  }

  form {
    display: grid;
    grid-template-areas: "buttons" "questions";
    grid-template-rows: auto calc(#{$view-container-height-no-toolbar} - 2rem);
  }

  form.survey-form {
    grid-template-areas: "buttons" "inputs" "questions";
    grid-template-rows: auto 72px calc(#{$view-container-height-no-toolbar} - 72px - 2rem);
  }

  .exam-buttons {
    grid-area: buttons;
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    padding: 4px 0;

    .button-group {
      display: flex;
      flex-wrap: wrap;
      gap: 8px;
    }

    .warn-text-color {
      margin: 4px;
    }
  }

  .exam-inputs {
    grid-area: inputs;
  }

  .exam-questions {
    grid-area: questions;
    overflow-y: auto;
  }

  .exam-question {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

}

